# NCEPLIBS-g2c

./: .gitignore  Alias_8c_source.html  CMakeLists.txt  LICENSE.md  README  README.md  aecpack_8c.html  aecpack_8c.js  aecpack_8c_source.html  aecunpack_8c.html  aecunpack_8c.js  aecunpack_8c_source.html  annotated.html  annotated_dup.js  build_g2c.sh  classes.html  cmplxpack_8c.html  cmplxpack_8c_source.html  compack_8c.html  compack_8c_source.html  comunpack_8c.html  comunpack_8c.js  comunpack_8c_source.html  dec__jpeg2000_8c.html  dec__jpeg2000_8c.js  dec__jpeg2000_8c_source.html  dec__png_8c.html  dec__png_8c.js  dec__png_8c_source.html  decenc__aec_8c.html  decenc__aec_8c.js  decenc__aec_8c_source.html  decenc__openjpeg_8c.html  decenc__openjpeg_8c_source.html  dir_1120c50dc01af8bc3323139f424a1f58.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_cbdb8362360e11eafe2fa3bc74cf0ffd.html  drstemplates_8c.html  drstemplates_8c.js  (+227 more)
.github/workflows/: Intel.yml  Linux_options.yml  Linux_versions.yml  MacOS.yml  Spack.yml  developer.yml  intel.yml  linux.yml  linux_develop.yml  macOS.yml  macOS_openjpeg.yml  macos2.yml  main.yml  png_jpeg_options.yml  windows.yml
Conf/: AAA_rename_conf.sh  Collect_info.sh  G2c_gnu_General.sh  G2c_intel_Cray.sh  G2c_intel_Dell.sh  G2c_intel_General.sh  G2c_intel_Theia.sh  G2c_intel_Wcoss.sh
docs/: CMakeLists.txt  Doxyfile.in  user_guide.md
modulefiles/g2c/: 1.5.0  1.6.2
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  defines_b.js  defines_c.js  defines_d.js  files_0.js  (+49 more)
sorc/: FOR_SPA  g2cboi.tar  makefile  makefile.ccs  makefile.ncep
spack/: README  package.py
src/: CMakeLists.txt  CodeFlag.txt  Makefile  Template.txt  aecpack.c  aecunpack.c  build.sh  cmplxpack.c  compack.c  comunpack.c  dec_jpeg2000.c  dec_png.c  decenc_aec.c  decenc_jpeg2000.c  decenc_openjpeg.c  decenc_png.c  drstemplates.c  drstemplates.h  enc_jpeg2000.c  enc_png.c  g2_addfield.c  g2_addgrid.c  g2_addlocal.c  g2_create.c  g2_free.c  g2_getfld.c  g2_gribend.c  g2_info.c  g2_miss.c  g2_unpack1.c  g2_unpack2.c  g2_unpack3.c  g2_unpack4.c  g2_unpack5.c  g2_unpack6.c  g2_unpack7.c  g2ccompare.c  g2ccsv.c  g2ccsv.v  g2cdegrib2.c  (+39 more)
tests/: CMakeLists.txt  g2c_test_util.c  g2ctest.h  ref_WW3_Regional_US_West_Coast_20220718_0000_2.txt  ref_gdaswave.t00z.wcoast.0p16.f000.grb2index  ref_gdaswave.t00z.wcoast.0p16.f000_2.grb2index  run_compare_tests.sh  run_degrib2_tests.sh  run_extra_index_tests.sh  run_ftp_index_tests.sh  run_index_tests.sh  run_jasper_warning_test.sh  run_large_index_tests.sh  tst_addfield2.c  tst_addfield3.c  tst_addfield4.c  tst_addfield_spec.c  tst_aec.c  tst_aqm.c  tst_com.c  tst_csv.c  tst_decode.c  tst_degrib2.c  tst_degrib2_fast.c  tst_degrib2_ftp_all.c  tst_degrib2_int.c  tst_drstemplates.c  tst_error.c  tst_files.c  tst_ftp_degrib2.c  tst_ftp_files.c  tst_g2_addfield.c  tst_g2_addgrid.c  tst_g2_addlocal.c  tst_g2_create.c  tst_g2_testfile.c  tst_gbits.c  tst_gdaswave.c  tst_get_grid_template.c  tst_getdim.c  (+21 more)
tests/data/: ref_fv3lam.t00z.namerica.f00.grib2.degrib2  ref_fv3lam.t00z.prslev.f000.grib2.degrib2  ref_gdas.t12z.pgrb2.1p00.anl.degrib2  ref_gdaswave.t00z.wcoast.0p16.f000.grb2index  ref_testgrib2.grb2.degrib2  ref_tst_jasper_warning.txt  testgrib2.grb2
unit_test/: .compile_degrib2c_dell.sh.swp  build_unit_test_g2c.sh  degrib2c.c  makefile  makefile_wcoss_cray_intel  makefile_wcoss_dell_p3  test_g2c_degrib2c_grib2.sh
utils/: CMakeLists.txt  g2c_compare.c  g2c_degrib2.c  g2c_index.c
ver-1.6.4/: classes.html  cmplxpack_8c.html  cmplxpack_8c_source.html  compack_8c.html  compack_8c.js  comunpack_8c_source.html  dec__jpeg2000_8c.html  dir_1120c50dc01af8bc3323139f424a1f58.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  drstemplates_8c.js  enc__png_8c.html  enc__png_8c_source.html  functions.html  g2__addfield_8c_source.html  g2__addgrid_8c.html  g2__create_8c_source.html  g2__free_8c_source.html  g2__getfld_8c.html  g2__gribend_8c.js  g2__gribend_8c_source.html  g2__info_8c.js  g2__unpack1_8c.js  g2__unpack1_8c_source.html  g2__unpack2_8c.js  g2__unpack4_8c_source.html  g2__unpack6_8c.html  gbits_8c.html  gbits_8c.js  getdim_8c_source.html  getpoly_8c_source.html  grib2_8h.js  grib2_8h_structgribfield.js  grib2_8h_structgtemplate.js  gridtemplates_8c.js  index.html  int__power_8c.html  int__power_8c.js  jpcunpack_8c.html  mkieee_8c.js  navtreeindex0.js  (+8 more)
ver-1.6.4/search/: all_10.js  all_5.js  all_d.js  defines_2.js  defines_3.js  defines_4.js  files_3.js  files_6.js  files_8.js  functions_5.js  functions_6.js  functions_9.js  typedefs_4.js  variables_1.js  variables_7.js  variables_a.js  variables_b.js  variables_c.js
ver-1.7.0/: annotated.html  annotated_dup.js  classes.html  cmplxpack_8c.js  cmplxpack_8c_source.html  compack_8c.html  compack_8c.js  compack_8c_source.html  comunpack_8c_source.html  dec__jpeg2000_8c.js  dec__jpeg2000_8c_source.html  dec__png_8c.html  dec__png_8c.js  decenc__openjpeg_8c.html  decenc__openjpeg_8c_source.html  dir_49e56c817e5e54854c35e136979f97ca.html  drstemplates_8c.js  drstemplates_8c_source.html  drstemplates_8h.html  enc__png_8c.html  enc__png_8c_source.html  functions.html  functions_vars.html  g2__addfield_8c.html  g2__addfield_8c.js  g2__addfield_8c_source.html  g2__addgrid_8c.html  g2__addgrid_8c.js  g2__addgrid_8c_source.html  g2__addlocal_8c.js  g2__addlocal_8c_source.html  g2__create_8c.html  g2__free_8c.html  g2__getfld_8c_source.html  g2__info_8c.html  g2__miss_8c.html  g2__miss_8c.js  g2__miss_8c_source.html  g2__unpack1_8c.html  g2__unpack2_8c.html  (+45 more)
ver-1.7.0/search/: all_0.js  all_10.js  all_11.js  all_3.js  all_4.js  all_7.js  all_8.js  all_9.js  all_a.js  all_f.js  (+24 more)
(+56 files in other folders)
